--- a/css/component/navigation-bar.css
+++ b/css/component/navigation-bar.css
@@ -1,5 +1,4 @@
 .nav{
-    
     position:fixed;
     bottom:0;
     width:100%;
@@ -22,20 +21,23 @@
     
 }
 
+@keyframes notificationAnimation {
+    0%{
+        transform: none;
+    }
+    50%{
+        transform: translateY(-5px) rotateY(360deg);
+    }
+    100%{
+        transform: none;
+    }
+}
+
 .nav__notification{
-    background-color: tomato;
-    width:30px;
-    height: 30px;
-    display: flex;
-    justify-content: center;
-    align-items:center;
-    border-radius: 15px;
-    color:white;
-    font-weight: 600;
     position:absolute;
     left :15px;
     bottom : 15px;
-    
+    animation: notificationAnimation 2s ease-in-out infinite;
 }
 
 .nav__update{
@@ -49,4 +51,32 @@
     position:absolute;
     left :25px;
     bottom :25px;
+}
+
+@keyframes appearBtnAnimation {
+    from{
+        transform: translateY(80px);
+        opcity: 0;
+    }
+    to{ 
+        opacity: 1;
+        transform: none;
+    }
+}
+
+.nav__btn{
+ transform : translateY(50px);
+ animation: appearBtnAnimation 4s ease-in-out forwards ;
+}
+
+.nav__btn:nth-child(2){
+    animation-delay: 0.5s;
+}
+
+.nav__btn:nth-child(3){
+    animation-delay: 1s;
+}
+
+.nav__btn:nth-child(4){
+    animation-delay: 1.5s;
 }
