--- a/css/component/user-component.css
+++ b/css/component/user-component.css
@@ -2,11 +2,11 @@
     justify-content: space-between;
 }
 
-.user-component,
+.user-component, 
 .user-component__column:first-child{
-    display: flex;
+    display: flex;    
     align-items: center;
-    margin: 5px 0px;
+    
 
 }
 .user-component__avatar{
@@ -22,10 +22,18 @@
     font-size: 22px;
 }
 .user-component__subtitle{
+    display: flex;
+    
     margin-top: 8px;
-   
-    color: rgba(0,0,0,0.4)
+    font-size:17px;
+    color: rgba(0,0,0,0.5)
 }
+
+.user-component__subtitle h6{
+    margin-right: 10px;
+}
+
+
 .user-component___avatar--xl{
     width:80px;
     height : 80px;
@@ -41,14 +49,10 @@
     font-weight: 400;
 }
 
-.friends-screen__channel{
-    margin-top:25px;
-    border-top: 1px solid rgba(0,0,0,0.2);
-    padding-top:15px;
+
+.user-component__time{
+    
+    margin-bottom : 13px;
+    display: block;
 }
-.friends-screen__channel-header{
-    margin-bottom: 30px;
-    display: flex;
-    justify-content: space-between;
-    color: rgba(0,0,0,0.5)
-}
+
